update build.gradle
プレビュー機能を有効化