@@ -23,3 +23,7 @@ javadoc {
 test {
     useJUnitPlatform()
 }
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += '--enable-preview'
+}
